[gd_scene load_steps=4 format=3 uid="uid://klwwp0vjyw6"]

[ext_resource type="Script" path="res://Unit Classes/unit_base.gd" id="1"]
[ext_resource type="PackedScene" path="res://health_bar.tscn" id="2"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(7, 7)

[node name="Unit Base" type="Sprite2D"]
script = ExtResource("1")
faction = "Player"

[node name="Area2D" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(8, 8)
shape = SubResource("1")

[node name="Health Bar" parent="." instance=ExtResource("2")]
visible = false
position = Vector2(8, 14)

[node name="Status" type="Sprite2D" parent="."]
position = Vector2(0, -16)
centered = false

[connection signal="area_entered" from="Area2D" to="." method="_on_area2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area2d_area_exited"]
